minor ui updates - fixed initial layout issue with stack container

--- a/css/application.css
+++ b/css/application.css
@@ -9,10 +9,14 @@
 }
 
 #main-top-pane {
-  border-bottom  : 6px solid #0079c1;
-  display        : flex;
-  flex-direction : row;
-  align-items    : center;
+  height        : auto;
+  border-bottom : solid 6px #0079c1;
+}
+
+#top-pane-content {
+  /*display        : flex;*/
+  /*flex-direction : row;*/
+  /*align-items    : center;*/
 }
 
 #main-left-pane {
@@ -28,7 +32,7 @@
 }
 
 #details-node {
-  background: #f8fbfe;
+  background   : #f8fbfe;
   border-color : #0079c1;
   box-shadow   : none;
 }
@@ -187,13 +191,13 @@
   margin  : 0 !important;
 }
 
-#main-center-pane {
+/*#main-center-pane {
   overflow : hidden;
 }
 
 #main-center-pane .dijitContentPane {
   overflow : hidden !important;
-}
+}*/
 
 #item-grid-node,
 #item-list-node {
@@ -428,11 +432,11 @@
 }
 
 .current-filter-type {
-  /*vertical-align : middle;*/
+  /*...*/
 }
 
 .current-filter-label {
-  /*vertical-align : middle;*/
+
   font-weight : bold;
   color       : #0079c1;
 }
